<resources>
    <string name="app_name">Professional</string>
    <string name="username">Username:</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="status">"Status</string>
    <string name="requester_title">Requester View |</string>
    <string name="provider_title">Provider View |</string>
    <string name="PV_myProfile">My Profile</string>
    <string name="editProfile">Edit My Profile</string>
    <string name="PV_username">Username</string>
    <string name="PV_name">Name</string>
    <string name="PV_phone">Phone</string>
    <string name="otherPV_pScore">Provider Score</string>
    <string name="full_name">Full Name</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="empty_input_numeric">Please enter a value</string>
    <string name="cancel_bid">Are you sure you want to remove your bid? \n(This cannot be undone)</string>
    <string name="title_activity_requester_view_task">RequesterViewTaskActivity</string>
    <string name="title_activity_requester_add_task">RequesterAddTaskActivity</string>
    <string name="task_title_field">Task Name (30 characters max.)</string>
    <string name="task_description_field">Task Description (300 characters max.)</string>
    <string name="date_format">yyyy-mm-dd</string>
    <string name="add_photo">Add a photo (optional)</string>
    <string name="address_field">Location/Address (optional)</string>
    <string name="add_button">Add</string>
    <string name="back">Back</string>
    <string name="title_activity_maps">Map</string>
    <string name="NA">N/A</string>
    <string name="Address">Address</string>
    <string name="taskDate">Task Completed By</string>
    <string name="Description">Description</string>
    <string name="Task_Requester">Task Requester</string>
    <string name="Task_Provider">Task Provider</string>
    <string name="Accepted_bid">Accepted Bid</string>
    <string name="title_activity_maps_search_tasks">Map</string>
    <string name="title_activity_maps_search_location">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="plus_location">+ Task Location</string>
    <string name="title_activity_maps_show_alocation">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offline">You are currently offline.</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="enterUserPrompt">Please Enter a Username</string>
    <string name="nonExistentUser">Username does not exist</string>
    <string name="fieldsNotFilled">Please make sure all fields are filled</string>
    <string name="underMinCharacters">Username must be at least 4 characters</string>
    <string name="userExists">Username is already taken</string>
    <string name="invalidEmail">Must enter a valid email</string>
    <string name="invalidPhoneNumber">must enter a valid phone number</string>
    <string name="cannotCreateProfile">Something went wrong! We are unable to create profile</string>
    <string name="title_activity_provider_check_image">providerCheckImage</string>
    <string name="charLimit">Character limit exceeded (300 characters)</string>
</resources>
