<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="professional.team17.com.professional.RequesterAddTaskActivity">

    <include layout="@layout/requester_layout_2" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/requester_task_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/taskDescriptionField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/task_description_field"
            android:inputType="textPersonName"
            android:maxLength="300"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TaskNameField" />

        <EditText
            android:id="@+id/textualAddressField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/amiko"
            android:hint="@string/address_field"
            android:inputType=""
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/map_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoTextView" />

        <EditText
            android:id="@+id/TaskNameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/task_title_field"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textualDateView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/amiko"
            android:text="@string/date_format"
            app:layout_constraintEnd_toStartOf="@+id/calendarButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDescriptionField" />

        <ImageButton
            android:id="@+id/addPhotoButton"
            android:layout_width="40"
            android:layout_height="40"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/background_light"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/deleteButton"
            app:layout_constraintTop_toBottomOf="@+id/textualDateView"
            app:srcCompat="@drawable/add_image_icon_grey" />

        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textualDateView"
            app:layout_constraintTop_toBottomOf="@+id/taskDescriptionField"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textualAddressField" />

        <TextView
            android:id="@+id/photoTextView"
            android:layout_width="202dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/amiko"
            android:text="@string/add_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textualDateView" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="#dddddd"
            android:fontFamily="@font/amiko"
            android:text="@string/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/background_light"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textualDateView"
            app:srcCompat="@drawable/delete_icon" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
